fix: link color for a11y contrast

--- a/_sass/hydeout/_variables.scss
+++ b/_sass/hydeout/_variables.scss
@@ -47,7 +47,7 @@ $root-line-height: 1.5 !default;
 $body-color: $gray-5 !default;
 $body-muted: $gray-4 !default;
 $body-bg: #fff !default;
-$link-color: $blue !default;
+$link-color: #3d7e9a !default;
 $heading-color: $gray-6 !default;
 
 $border-color: $gray-2 !default;
